# jaundice-rate

./: .dockerignore  .env.dist  README.md  conftest.py  constants.py  docker-compose.yml  main.py  pyproject.toml  server.py  text_tools.py
adapters/: html_tools.py  inosmi_ru.py
conf/: redis.conf
test_data/: gogol_nikolay_taras_bulba_-_bookscafenet.txt
tests/: conftest.py  inosmi_ru.py  server.py  text_tools.py
